<resources>
    <string name="app_name">WGU</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Bruzor Woods</string>
    <string name="nav_header_subtitle">Business Management - B.S.</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_terms">Terms</string>
    <string name="menu_courses">Courses</string>
    <string name="menu_assessments">Assessments</string>
    <string name="menu_mentors">Mentors</string>
    <string name="menu_tools">Settings</string>

    <string name="view_term_list">Manage Terms</string>
    <string name="title_item_list">Terms</string>
    <string name="title_item_detail">Term Detail</string>
    <string name="title_activity_term_editor">Term Editor</string>

    <string name="view_course_list">Manage Courses</string>
    <string name="title_course_list">Courses</string>
    <string name="title_course_detail">Course Detail</string>
    <string name="title_activity_course_editor">Course Editor</string>

    <string name="view_assessment_list">Manage Assessment</string>
    <string name="title_assessment_list">Assessments</string>
    <string name="title_assessment_detail">Assessment Detail</string>
    <string name="title_activity_assessment_editor">Assessment Editor</string>

    <string name="title_activity_mentor_editor">Mentor Editor</string>

    <string name="title_note_detail">Note Detail</string>
    <string name="title_activity_note_editor">Note Editor</string>

    <string name="title_activity_settings">Settings</string>

    <string name="title_activity_sharing">Share a Note</string>
    <string name="nav_communicate">Communicate</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="courses">Courses</string>
    <string name="add_course">Add Course</string>
    <string name="select_date">Select Date</string>
    <string name="view_assessments">View Assessments</string>
    <string name="view_courses">View Courses</string>
    <string name="view_terms">View Terms</string>
    <string name="mentor_name">Mentor Name</string>
    <string name="mentor_email">Mentor Email</string>
    <string name="mentor_phone">Mentor Phone</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
</resources>
